--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-use-websocket": "^2.7.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.2",
     "websocket": "^1.0.34"
   },
