--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "serve": "^13.0.2",
     "web-vitals": "^1.1.2",
     "websocket": "^1.0.34"
   },
