--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
