changed proxy to chat app express instead of my localhost

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chat-react-app",
+  "proxy":"http://chat-app-express-jx.herokuapp.com/ ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
